# systemabilitymgr_safwk

./: .gitignore  Cargo.toml  OTA.xml  README.md  README_zh.md  bundle.json  cfi_blocklist.txt  config.gni  ohos.build  var.gni
etc/profile/: BUILD.gn  foundation.cfg  foundation_permission_desc.json  foundation_trust.json  foundation_trust.xml
etc/profile/no_sceneboard/: foundation.cfg
interfaces/innerkits/dynamic_cache/: BUILD.gn
interfaces/innerkits/dynamic_cache/include/: dynamic_cache.h
interfaces/innerkits/safwk/: BUILD.gn  api_cache_manager.h  expire_lru_cache.h  libsystem_ability_fwk.versionscript  system_ability_ondemand_reason.h
interfaces/innerkits/safwk/rust/: BUILD.gn  Cargo.toml
interfaces/innerkits/safwk/rust/examples/: BUILD.gn
interfaces/innerkits/safwk/rust/examples/audio_rust_sa/: Cargo.toml
interfaces/innerkits/safwk/rust/examples/audio_rust_sa/src/: hilog.rs  interface.rs  lib.rs  proxy.rs  stub.rs
interfaces/innerkits/safwk/rust/examples/listen_rust_sa/: Cargo.toml
interfaces/innerkits/safwk/rust/examples/listen_rust_sa/src/: interface.rs  lib.rs  stub.rs
interfaces/innerkits/safwk/rust/include/: system_ability_wrapper.h
interfaces/innerkits/safwk/rust/src/: ability.rs  cxx_share.rs  exts.rs  hilog.rs  lib.rs  reason.rs  sa_binding.rs  wrapper.rs
interfaces/innerkits/safwk/rust/src/cxx/: system_ability_wrapper.cpp
interfaces/innerkits/safwk/rust/src/safwk/: macros.rs  mod.rs  r_system_ability.rs
interfaces/innerkits/safwk/rust/tests/: BUILD.gn  basic.rs  entry.rs
interfaces/innerkits/safwk/rust/tests/c/: BUILD.gn
interfaces/innerkits/safwk/rust/tests/c/include/: safwk_rust_test.h
interfaces/innerkits/safwk/rust/tests/c/src/: safwk_rust_test.cpp
services/safwk/: BUILD.gn
services/safwk/c_wrapper/include/: c_system_ability.h  c_system_ability_internal.h
services/safwk/c_wrapper/source/: c_system_ability.cpp
services/safwk/include/: ffrt_handler.h  local_ability_manager.h  local_ability_manager_dumper.h  local_ability_manager_stub.h  local_ability_task_handler.h  parse_util.h  safwk_log.h  single_instance.h  system_ability.h  system_ability_ondemand_reason.h
services/safwk/src/: api_cache_manager.cpp  ffrt_handler.cpp  local_ability_manager.cpp  local_ability_manager_dumper.cpp  local_ability_manager_stub.cpp  local_ability_task_handler.cpp  main.cpp  parse_util.cpp  system_ability.cpp  system_ability_ondemand_reason.cpp  system_ability_start.cpp
svc/: BUILD.gn
svc/include/: svc_control.h
svc/src/: main.cpp  svc_control.cpp
test/: BUILD.gn
test/fuzztest/safwk_fuzzer/: BUILD.gn  systemabilityfwk_fuzzer.cpp
test/fuzztest/systemabilityfwk_fuzzer/: BUILD.gn  project.xml  systemabilityfwk_fuzzer.cpp  systemabilityfwk_fuzzer.h
test/mock/common/audio_ability/: BUILD.gn
test/mock/common/audio_ability/include/: i_test_audio_ability.h  test_audio_ability.h  test_audio_ability_proxy.h  test_audio_ability_stub.h
test/mock/common/audio_ability/src/: test_audio_ability.cpp  test_audio_ability_proxy.cpp  test_audio_ability_stub.cpp
test/mock/common/connect_ability/: BUILD.gn
test/mock/common/connect_ability/include/: i_test_connect_ability.h  test_connect_ability.h  test_connect_ability_proxy.h  test_connect_ability_stub.h
test/mock/common/connect_ability/src/: test_connect_ability.cpp  test_connect_ability_proxy.cpp  test_connect_ability_stub.cpp
test/mock/common/demo_sa/: BUILD.gn
test/mock/common/demo_sa/include/: demo_interface.h  demo_proxy.h  demo_service.h  demo_stub.h
test/mock/common/incomplete_ability/: BUILD.gn
test/mock/common/incomplete_ability/include/: i_test_incomplete_ability.h  test_incomplete_ability.h  test_incomplete_ability_proxy.h  test_incomplete_ability_stub.h
test/mock/common/incomplete_ability/src/: test_incomplete_ability.cpp  test_incomplete_ability_proxy.cpp  (+1 more)
test/mock/common/ondemand_ability/: BUILD.gn
test/mock/common/tt_ability/: BUILD.gn
test/resource/: BUILD.gn  ohos_test.xml
test/resource/profile/: 1489.json  1489.xml  invalid_root.xml  listen_test.cfg  listen_test.json  profile_audio.json  profile_audio.xml  rust_listen_test.cfg  rust_listen_test.json
test/services/safwk/unittest/: BC43581.tmp  BUILD.gn  api_cache_manager_test.cpp  c_system_ability.test.cpp  expire_lru_cache_test.cpp  local_ability_manager_dumper_test.cpp  local_ability_manager_stub_test.cpp  local_ability_manager_test.cpp  mock_accesstoken_kit.cpp  mock_local_ability_manager_test.cpp  profile_parse_util_test.cpp  sa_mock_permission.cpp  sa_proxy_cache_test.cpp  system_ability_manager_cache_test.cpp  system_ability_ondemand_reason_test.cpp  system_ability_start_test.cpp  system_ability_test.cpp
test/services/safwk/unittest/listen_ability/: BUILD.gn  IListenAbility.idl
test/services/safwk/unittest/listen_ability/include/: ilisten_ability.h  listen_ability.h  listen_ability_proxy.h  listen_ability_stub.h
test/services/safwk/unittest/listen_ability/src/: listen_ability.cpp  listen_ability_proxy.cpp  listen_ability_stub.cpp
test/services/safwk/unittest/rust/: BUILD.gn
test/services/safwk/unittest/rust/audio_rust_sa/: audio.rs  lib.rs
test/services/safwk/unittest/rust/listen_rust_sa/: lib.rs  listen.rs
test/services/safwk/unittest/rust/rust_sa_test/: main.rs
test/services/safwk/unittest/rust/src/: lib.rs
test/services/safwk/unittest/test_sa_proxy_cache_ability/: BUILD.gn
test/services/safwk/unittest/test_sa_proxy_cache_ability/include/: itest_sa_proxy_cache.h  test_sa_proxy_cache.h  test_sa_proxy_cache_proxy.h  test_sa_proxy_cache_stub.h
test/services/safwk/unittest/test_sa_proxy_cache_ability/src/: test_sa_proxy_cache.cpp  test_sa_proxy_cache_proxy.cpp  test_sa_proxy_cache_stub.cpp
test/services/safwk/unittest/test_svc_ability/: BUILD.gn
test/services/safwk/unittest/test_svc_ability/include/: itest_svc_ability.h  test_svc_ability.h
test/services/safwk/unittest/test_svc_ability/src/: test_svc_ability.cpp
test/svc/unittest/: BUILD.gn
test/svc/unittest/include/: svc_control_test.h
test/svc/unittest/src/: svc_control_test.cpp  svc_test.cpp
(+14 files in other folders)
