# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

################################################################################
config("config_safwk") {
  visibility = [ ":*" ]
  include_dirs = [
    "//foundation/distributedschedule/safwk/services/safwk/include",
    "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk",
  ]
}

ohos_executable("sa_main") {
  install_enable = true
  sources = [ "src/main.cpp" ]

  configs = [ ":config_safwk" ]

  ldflags = [ "-rdynamic" ]

  deps = [ "../../interfaces/innerkits/safwk:system_ability_fwk" ]

  if (is_standard_system) {
    external_deps = [
      "hiviewdfx_hilog_native:libhilog",
      "ipc:ipc_core",
      "samgr_standard:lsamgr",
      "samgr_standard:samgr_common",
      "samgr_standard:samgr_proxy",
      "utils_base:utils",
    ]
  }

  part_name = "safwk"
  subsystem_name = "distributedschedule"
}
################################################################################
