# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

module_output_path = "safwk/safwk"

config("svc_test_config") {
  include_dirs = [
    "../../../svc/include",
    "../../../services/safwk/include",
    "../../services/safwk/unittest",
  ]
}

ohos_unittest("SvcTest") {
  module_out_path = module_output_path

  sources = [
    "../../../svc/src/svc_control.cpp",
    "src/svc_test.cpp",
  ]

  configs = [
    "../../resource:coverage_flags",
    ":svc_test_config",
  ]

  external_deps = [
    "c_utils:utils",
    "googletest:gtest_main",
    "hilog:libhilog",
    "ipc:ipc_single",
    "samgr:samgr_common",
    "samgr:samgr_proxy",
  ]

  if (target_cpu == "arm") {
    cflags = [ "-DBINDER_IPC_32BIT" ]
  }
}

ohos_executable("svc_test") {
  testonly = true

  sources = [
    "../../../svc/src/svc_control.cpp",
    "src/svc_control_test.cpp",
  ]

  include_dirs = [ "include" ]
  configs = [
    "../../resource:coverage_flags",
    ":svc_test_config",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "samgr:samgr_common",
    "samgr:samgr_proxy",
  ]

  if (target_cpu == "arm") {
    cflags = [ "-DBINDER_IPC_32BIT" ]
  }

  part_name = "safwk"
  subsystem_name = "systemabilitymgr"
}

group("unittest") {
  testonly = true
  deps = [
    ":SvcTest",
    ":svc_test",
  ]
}
