# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "system_ability_fwk_rust"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "system ability framework"
repository = "https://gitee.com/openharmony/systemabilitymgr_safwk"

[dependencies]
ipc_rust = { git = "https://gitee.com/openharmony/communication_ipc.git" }
hilog_rust = { git = "https://gitee.com/openharmony/hiviewdfx_hilog.git" }
rust_samgr = { git = "https://gitee.com/openharmony/systemabilitymgr_samgr.git"}
