# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "system_ability_fwk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipc = { git = "https://gitee.com/openharmony/communication_ipc" }
hilog_rust = { git = "https://gitee.com/openharmony/hiviewdfx_hilog.git" }
cxx = "1.0.115"

[dev-dependencies]
samgr = { git = "https://gitee.com/openharmony/systemabilitymgr_samgr", version = "1.0.0" }
audio_rust_sa = { path = "./examples/audio_rust_sa" }
